--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </nav>
     <!--Productos-->
     <div class="container tope">
-        <h1 class="mx-0 text-white fs-3 mt-5">Fasion & Clothing</h1>
+        <h1 class="mx-0 text-white fs-3 mt-5">Fashion & Clothing</h1>
 
         <div id="articulos" class="row g-4">
 
