--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Web Tienda Ropa</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -62,7 +62,7 @@
     </nav>
     <!--Productos-->
     <div class="container tope">
-        <h1 class="mx-0 text-white fs-3 mt-5">Fashion & Clothing</h1>
+        <h1 class="mx-0 text-white fs-3 mt-5">Fasion & Clothing</h1>
 
         <div id="articulos" class="row g-4">
 
